name:                mgaps-website
version:             1.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MGAPS/mgaps-website#readme
license:             BSD3
license-file:        LICENSE
author:              Laurent P. René de Cotret
maintainer:          Laurent P. René de Cotret
copyright:           (c) McGill Graduate Association of Physics Students
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mgaps-website
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Template, 
                       BulmaFilter
  default-language:    Haskell2010
  ghc-options:         -threaded 
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  build-depends:       base             >= 4.14 && < 5,
                       filepath         >= 1.0  && < 2.0,
                       hakyll           >= 4.15.1.1,
                       hakyll-images    >= 1.1  && < 2,
                       pandoc           >= 2.17 && < 3,
                       pandoc-types     >= 1.17 && < 2,
                       blaze-html       >= 0.9  && < 1,
                       blaze-markup     >= 0.8  && < 1,
                       bytestring       >= 0.11 && < 1,
                       text             >= 1    && < 3,
                       typed-process    >= 0.2  && < 1
